--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hofstra JRNL83 Data Journalism</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="Johnny Rup" content="">
 
     <!-- CSS -->
     
@@ -233,22 +233,35 @@ width: 800px;
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header">
-          <h1>Your Headline Goes Here</h1>
-          <h2>By Your Name</h2>
+          <h1>State Responsiveness to the Coronavirus</h1>
+          <h2>By Johnny Rup</h2>
           <hr>
         </div>
 <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id elit id turpis congue fermentum id a felis. In rhoncus velit ac enim congue, et dictum nunc luctus. Suspendisse pharetra at nulla at eleifend. Donec ultrices convallis placerat. Duis a dolor a sem dignissim vestibulum hendrerit vitae ante. Duis a arcu ac purus rhoncus venenatis congue nec lacus. Etiam nec ullamcorper lectus, sed feugiat purus.
+          Different American states have all decided to handle concerns about the coronavirus in different fashions. Some were more aggressive at closing stores, restaurants and other public places than others. However, public schools were pretty much the last type of closure to occur, as the first one happened on March 16, while the first case appeared on January 21, in the state of Washington. 
 </p>
 <p>
-          Suspendisse pharetra at nulla at eleifend. Donec ultrices convallis placerat. Duis a dolor a sem dignissim vestibulum hendrerit vitae ante. Duis a arcu ac purus rhoncus venenatis congue nec lacus. Etiam nec ullamcorper lectus, sed feugiat purus.
+          Once the school closings started happening though, every state joined in relatively quickly. By March 24, all 50 states had begun to see closings. As the data shows, no one state was truly out in front of the pandemic when it came to schools, as they all followed each other relatively quickly. However, since the coronavirus arrived in each state at a different date, the time it took for schools to begin closing can be seen in the following data.
 </p>
 
-        <div class="flourish-embed flourish-map" data-src="visualisation/1858034" data-url="https://flo.uri.sh/visualisation/1858034/embed"><xxxx src="https://public.flourish.studio/resources/embed.js"></xxxx></div>
+        <iframe width="742.3329519450801" height="458.97083333333336" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSByKHWXgqA8fs0vjXrxzbKKjN1p5Zrm-wrO1kcxZZQhwBQthvg93lTnMGyfCFfEIDx9j8OcQMBui5O/pubchart?oid=170467007&amp;format=interactive"></iframe>
 
     <div id="footer">
-        <p class="muted credit">Source: Data Source</p>
+        <p class="muted credit">Source: State Data and Education Week</p>
     </div>
+<p>   
+          One state that was really out in front was West Virginia. They began closing schools before their first case even appeared. It took Washington the most time to begin closing schools, as they only started doing so 56 days after the coronavirus first arrived in the state. 
+</p>  
+<p>
+          Below is the data showing COVID-19 death rates by state. Each figure is based on a rate of deaths per 100,000 people. 
+</p>  
+        <iframe width="907.8533459040572" height="561.323506396721" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRADGeaU1u7nnWVl3uacA4ftXVh2aYfskGadSmiXEqRBmCJ2cTEaJ5uaKOTcMlrMZ0yuKWmKsamll9p/pubchart?oid=369650342&amp;format=interactive"></iframe>
+    <div id="footer">
+        <p class="muted credit">Statista</p>
+    </div>
+<p>
+          Ultimately, there isn't much of a correlation between the time it took to start closing schools and death rate. In the end, factors such as population density have had much more of an effect. If every state had the same population or population density, it is possible that response time in the form of school closings would have mattered more. 
+</p>  
   </div>
 </div>
 
